# Velo-Browser

./: Cargo.toml  Makefile  README.md  docker-compose.yml  install.sh  uninstall.sh  update.sh
assets/: velo.desktop
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
src/: autofill.js  backend.rs  bookmarks.rs  downloads.rs  engine.rs  find_bar.rs  history.rs  main.rs  newtab.html  notes.rs  passwords.rs  passwords_panel.rs  style.css  update.rs  window.rs
