[package]
name = "velo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "velo"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
webkit6 = { version = "0.6", features = ["v2_42"] }
glib = "0.22"
gio = "0.22"
